// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TweetDetail render login user own tweet to snapshot 1`] = `
<div
  className="tweet-detail-container flex h-full"
>
  <div
    className="tweet-detail relative w-96 mx-auto h-fit pt-10"
  >
    <div
      className="ant-card ant-card-bordered pt-6 css-dev-only-do-not-override-diro6f"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <a
          className="absolute top-1 left-2 cursor-pointer select-none"
          href="/testUser"
          onClick={[Function]}
        >
          <span
            className="text-2xl"
          >
            <span
              aria-label="arrow-left"
              className="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </span>
        </a>
        <div
          className="absolute top-2 right-2 cursor-pointer select-none"
          onClick={[Function]}
        >
          <button
            aria-checked={false}
            className="ant-switch css-dev-only-do-not-override-diro6f"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <span
                className="ant-switch-inner-checked"
              />
              <span
                className="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
        <div
          className="ant-card-meta"
        >
          <div
            className="ant-card-meta-avatar"
          >
            <span
              className="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-icon bg-slate-500 css-dev-only-do-not-override-diro6f"
              style={Object {}}
            >
              <span
                aria-label="user"
                className="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            className="ant-card-meta-detail"
          >
            <div
              className="ant-card-meta-title"
            >
              <span
                className="text-sm font-bold leading-none select-none"
              >
                Test
              </span>
              <span
                className="text-xs text-slate-500 float-right select-none mt-1"
              >
                created 
                3 days ago
              </span>
            </div>
            <div
              className="ant-card-meta-description"
            >
              <p
                className="m-0 break-words text-sm"
              >
                Hello, world!
              </p>
              <div
                className="extra-info mt-4"
              >
                <span
                  className="tweet-id text-xs text-slate-600 font-bold select-none"
                >
                  Tweet id: 
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        className="ant-card-actions"
      >
        <li
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <span>
            <span
              className="hover:text-blue-600 select-none inline-block w-full"
              onClick={[Function]}
            >
              Edit
            </span>
          </span>
        </li>
        <li
          style={
            Object {
              "width": "50%",
            }
          }
        >
          <span>
            <span
              className="hover:text-red-600 select-none inline-block w-full"
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              Delete
            </span>
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TweetDetail render other user tweet to snapshot 1`] = `
<div
  className="tweet-detail-container flex h-full"
>
  <div
    className="tweet-detail relative w-96 mx-auto h-fit pt-10"
  >
    <div
      className="ant-card ant-card-bordered pt-6 css-dev-only-do-not-override-diro6f"
    >
      <div
        className="ant-card-body"
        style={Object {}}
      >
        <a
          className="absolute top-1 left-2 cursor-pointer select-none"
          href="/testUser"
          onClick={[Function]}
        >
          <span
            className="text-2xl"
          >
            <span
              aria-label="arrow-left"
              className="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </span>
        </a>
        <div
          className="absolute top-2 right-2 cursor-pointer select-none"
          onClick={[Function]}
        >
          <button
            aria-checked={false}
            className="ant-switch css-dev-only-do-not-override-diro6f"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="ant-switch-handle"
            />
            <span
              className="ant-switch-inner"
            >
              <span
                className="ant-switch-inner-checked"
              />
              <span
                className="ant-switch-inner-unchecked"
              />
            </span>
          </button>
        </div>
        <div
          className="ant-card-meta"
        >
          <div
            className="ant-card-meta-avatar"
          >
            <span
              className="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-icon bg-slate-500 css-dev-only-do-not-override-diro6f"
              style={Object {}}
            >
              <span
                aria-label="user"
                className="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </span>
          </div>
          <div
            className="ant-card-meta-detail"
          >
            <div
              className="ant-card-meta-title"
            >
              <span
                className="text-sm font-bold leading-none select-none"
              >
                Li
              </span>
              <span
                className="text-xs text-slate-500 float-right select-none mt-1"
              >
                created 
                about 20 hours ago
              </span>
            </div>
            <div
              className="ant-card-meta-description"
            >
              <p
                className="m-0 break-words text-sm"
              >
                抽刀断水水更流，举杯销愁愁更愁
              </p>
              <div
                className="extra-info mt-4"
              >
                <span
                  className="tweet-id text-xs text-slate-600 font-bold select-none"
                >
                  Tweet id: 
                  2
                </span>
                <span
                  className="update-time text-xs text-slate-500 float-right select-none"
                >
                  edited 
                  about 20 hours ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
